    flushed during shutdown.
 -- Removed src/slurmrestd/plugins/openapi/slurmdbd/openapi.json from source
    repository. slurmrest should always be used to generate a new OpenAPI
    schema (aka openapi.json or openapi.yaml) after compilation.
 -- mpi/pmix - Fix potential deadlock and races with het jobs, and fix potential
    memory and FDs leaks.

* Changes in Slurm 24.05.5
==========================
 -- Fix issue signaling cron jobs resulting in unintended requeues.
 -- Fix slurmctld memory leak in implementation of HealthCheckNodeState=CYCLE.
 -- job_container/tmpfs - Fix SLURM_CONF env variable not being properly set.
 -- sched/backfill - Fix job's time_limit being overwritten by time_min for job
    arrays in some situations.
 -- RoutePart - fix segfault from incorrect memory allocation when node doesn't
    exist in any partition.
 -- slurmctld - Fix crash when a job is evaluated for a reservation after
    removal of a dynamic node.

* Changes in Slurm 24.05.4
==========================
 -- Fix generic int sort functions.
 -- Fix user look up using possible unrealized uid in the dbd.
 -- Fix FreeBSD compile issue with tls/none plugin.
 -- slurmrestd - Fix regressions that allowed slurmrestd to be run as SlurmUser
    when SlurmUser was not root.
 -- mpi/pmix fix race conditions with het jobs at step start/end which could
    make srun to hang.
 -- Fix not showing some SelectTypeParameters in scontrol show config.
 -- Avoid assert when dumping removed certain fields in JSON/YAML.
 -- Improve how shards are scheduled with affinity in mind.
 -- Fix MaxJobsAccruePU not being respected when MaxJobsAccruePA is set
    in the same QOS.
 -- Prevent backfill from planning jobs that use overlapping resources for the
    same time slot if the job's time limit is less than bf_resolution.
 -- Fix memory leak when requesting typed gres and --[cpus|mem]-per-gpu.
 -- Prevent backfill from breaking out due to "system state changed" every 30